--- a/src/styles/adminNavbar.css
+++ b/src/styles/adminNavbar.css
@@ -1,4 +1,7 @@
-
+.adminnavbar
+{
+   
+}
 .navbar
 {
     display: flex;
@@ -24,7 +27,8 @@
     /* padding-top: 10px; */
     border-radius: 100px;
     margin-left: 20px ;
-    margin-top: 2px;
+    /* margin-top: 2px; */
+    align-items: center;
     
 }
 .pages a:hover
