--- a/src/styles/readBook.css
+++ b/src/styles/readBook.css
@@ -1,4 +1,7 @@
 .readbook
 {
-    background-color: rgba(109, 109, 127, 0.54);
+    background-color: rgba(182, 182, 197, 0.54);
+    padding:  130px 20px;
 }
+.sec1
+{padding: 0px;}
