--- a/src/styles/bookList.css
+++ b/src/styles/bookList.css
@@ -6,6 +6,7 @@
     margin: 25px 120px;
     border: 0.1px solid rgb(247, 241, 241);
     border-radius: 3px;
+    box-shadow: -2px -2px 12px 8px rgb(208, 208, 224);
 }
 .book img
 {
