--- a/src/styles/userlist.css
+++ b/src/styles/userlist.css
@@ -3,15 +3,37 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    /* padding: 20px 25px; */
+     margin: 10px;
     
 }
+ .listheadding
+{
+    text-shadow: 10px -7px 12px gray;
+    margin: 0px;
+}
+
 .section1
 {
-    background-color: rgba(71, 70, 70, 0.189);
-    padding-bottom: 500px;
+    
+    background-size: cover;
+     padding-bottom: 500px; 
+     padding: 8px;
 }
 .users
 {
     background-color: rgba(183, 183, 192, 0.736);
-    padding: 20px;
+    padding: 20px 5px; 
+    box-shadow: 10px -8px 10px rgba(179, 173, 173, 0.979);
+    margin: 15px;
+}
+.userbtn
+{
+    margin-left: 130px;
+    padding: 7px 15px;
+} 
+.userlist
+{
+    background-color: rgba(71, 70, 70, 0.189);
+    background-size: cover;
 }
